--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
     "babel-preset-react": "^6.11.1",
     "babelify": "^7.3.0",
     "es6-promise": "^3.2.1",
+    "immutable": "^3.8.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "whatwg-fetch": "^1.0.0"
+  },
+  "devDependencies": {
+    "redux-devtools": "^3.3.1"
   }
 }
