--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babelify": "^7.3.0",
     "es6-promise": "^3.2.1",
     "immutable": "^3.8.1",
+    "jquery": "^3.1.0",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-redux": "^4.4.5",
