--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "main": "./index.js",
   "scripts": {
-	  "build": "babel-node --presets es2015 build.js",
-	  "lint": "eslint index.js app; exit 0"
+    "build": "rollup -c",
+    "watch": "rollup -c -w",
+    "lint": "eslint index.js app; exit 0"
   },
   "dependencies": {
-    "babel-preset-react": "^6.11.1",
-    "babelify": "^7.3.0",
     "es6-promise": "^3.2.1",
     "immutable": "^3.8.1",
     "react": "^15.2.1",
@@ -16,13 +15,14 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "rollup-watch": "^2.5.0",
     "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
     "babel-core": "^6.11.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2015-rollup": "^1.1.1",
+    "babel-preset-react": "^6.11.1",
     "eslint": "^2.13.1",
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.12.0",
