--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "es6-promise": "^3.2.1",
+    "ical-generator": "^0.2.7",
     "immutable": "^3.8.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
