--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,10 +1,13 @@
 {
   "manifest_version": 2,
   "name": "Build a Bear",
-  "version": "1.0",
+  "version": "1.0.0.1",
   "description": "Builds a better bear",
   "browser_action": {
-    "default_icon": "128.png"
+    "default_icon": "icon128.png"
+  },
+  "icons": {
+    "128": "icon128.png"
   },
   "content_scripts": [
     {
