--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -11,7 +11,7 @@
   },
   "content_scripts": [
     {
-      "matches": ["*://bcsweb.is.berkeley.edu/*"],
+      "matches": ["*://bcsweb.is.berkeley.edu/*SSR_SSENRL_CART*"],
       "js": ["meme.js"]
     }
   ]
