--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,13 +1,16 @@
 {
   "manifest_version": 2,
   "name": "Build a Bear",
-  "version": "1.0.0.5",
+  "version": "1.0.0.6",
   "description": "Builds a better bear",
   "browser_action": {
     "default_icon": "icon128.png"
   },
   "icons": {
     "128": "icon128.png"
+  },
+  "background": {
+    "scripts": ["e.js"]
   },
   "content_scripts": [
     {
